--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "*.py": "bat",
         "gausspoint.C": "cpp",
         "gaussintegrationrule.C": "cpp",
         "algorithm": "cpp",
